[project]
name = "python-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.1.17",
    "httpx>=0.28.1",
    "starlette>=0.44.0",
    "uvicorn>=0.33.0",
]
